react_project/src/components/bookWindow/bookWindow.css
.windowContainer {
    display: flex;
    flex-direction: column;
    position: relative;
    overflow: hidden;
    background-color: rgb(248, 248, 248);
    margin: 5vw 10vw 0 10vw;
}

.wapperWindow {
    display: flex;
    position: relative;
    margin: 0;
}

.windowTitle {
    display: flex;
    width: 100%;
    align-items: center;
    justify-content: space-between;
    margin-bottom: 1vw;
}

.windowItems {
    display: flex;
    gap: 15px;
    transition: 0.75s ease;
}

.windowItem {
    /* display: flex; */
    margin-right: 40px;
}

.title {
    display: flex;
    font-size: 22px;
    font-weight: bold;
    color: rgb(66, 66, 66);
}

.seeAll {
    display: flex;
    align-items: center;
}

.text {
    font-size: 20px;
    margin-right: 5px;
    color: rgb(66, 66, 66);
    transition: 0.25s ease;
}

.text:hover {
    color: rgb(0, 122, 116);
    transition: 0.25s ease;   
}

.windowRightArrow {
    font-size: 14px;
    fill: rgb(0, 122, 116);
    transition: 0.25s ease;
}

.arrowLeft{
    display: flex;
    width: fit-content;
    position: absolute;
    top: 120px;
    left: 0;
    z-index: 99;
    cursor: pointer;
    background-color: rgba(255, 255, 255, 0.3);
    border-radius: 0 15px 15px 0;
    transition: 0.5s ease;
}

.arrowLeft:hover {
    background-color: rgb(248, 248, 248);
    transition: 0.5s ease;
}

.arrowRight{
    display: flex;
    width: fit-content;
    position: absolute;
    top: 120px;
    right: 0;
    z-index: 99;
    cursor: pointer;
    background-color: rgba(255, 255, 255, 0.3);
    border-radius: 15px 0 0 15px;
    transition: 0.5s ease;
}

.arrowRight:hover {
    background-color: rgb(248, 248, 248);
    transition: 0.5s ease;
}

.arrowLeftIcon {
    font-size: 30px;
    fill: rgb(66, 66, 66);
}

.arrowRightIcon {
    font-size: 30px;
    fill: rgb(66, 66, 66);
}

